# back0xff

./: .gitignore  Dockerfile  README.md  build.py  caps.sh  main.py  pipelines.py  plugins.py
bgsep/: gstback0xffbgsep.c  gstback0xffbgsep.h  meson.build
